[B]Version 1.1.15[/B]
hanime.tv - fix episode lookup from contextmenu on Matrix
