@@ -59,7 +59,12 @@ def Playvid(url, name, download=None):
     vp = utils.VideoPlayer(name, download)
     vp.progress.update(25, "[CR]Loading video page[CR]")
     vidsite = utils.getHtml(url, site.url)
-    video = re.compile(r'video">.+?src="([^"]+)', re.DOTALL | re.IGNORECASE).findall(vidsite)[0]
+    v = re.compile(r'video">.+?src="([^"]+)').search(vidsite)
+    if v:
+        video = v.group(1)
+    else:
+        v = re.compile(r'hash:\s*"([^"]+)').findall(vidsite)[0]
+        video = 'https://daxab.com/player/{0}'.format(v)
     video = '{0}|{1}'.format(video, url) if 'daxab' in video else video
     vp.play_from_link_to_resolve(video)
 
@@ -78,7 +83,7 @@ def Search(url, keyword=None):
 @site.register()
 def Categories(url):
     response = utils.getHtml(url, site.url)
-    match = re.compile(r'<div\s*class="video-item">.*?a\s*href="([^"]+)">.*?<img\s*src="([^"]+)"\s*alt="([^"]+)"', re.DOTALL | re.IGNORECASE).findall(response)
+    match = re.compile(r'<div\s*class="video-item">.+?href="([^"]+)".+?thumb="([^"]+).+?title">([^<]+)', re.DOTALL | re.IGNORECASE).findall(response)
     for caturl, img, name in sorted(match, key=lambda x: x[2]):
         caturl = site.url[:-1] + caturl
         img = site.url[:-1] + img
