@@ -61,7 +61,7 @@ def List(url):
     np = re.compile(r'class="next page-numbers"\s*href=([^\s>]+)', re.DOTALL | re.IGNORECASE).search(listhtml)
     if np:
         currpg = re.compile(r'class="page-numbers\s*current">([^<]+)', re.DOTALL | re.IGNORECASE).findall(listhtml)[0]
-        lastpg = re.compile(r'>([^<]+)</a></li><li><a\s*class="next\s*page-numbers"', re.DOTALL | re.IGNORECASE).findall(listhtml)[0]
+        lastpg = re.compile(r'>([^<]+)</a></li>\s*<li><a\s*class="next\s*page-numbers"', re.DOTALL | re.IGNORECASE).findall(listhtml)[0]
         site.add_dir('Next Page...(Currently in {0} of {1})'.format(currpg, lastpg), np.group(1), 'List', site.img_next)
 
     utils.eod()
